# nucleos-newlib

./: .gitignore  config.sub
newlib/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.host  newlib.hin
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/nucleos/: Makefile.am  Makefile.in  _exit.c  access.c  aclocal.m4  alarm.c  brk.c  cfgetispeed.c  cfgetospeed.c  cfsetispeed.c  cfsetospeed.c  chdir.c  chmod.c  chown.c  chroot.c  close.c  closedir.c  configure  configure.in  cprofile.c  creat.c  ctermid.c  cuserid.c  dup.c  dup2.c  execve.c  execvp.c  fchdir.c  fchmod.c  fchown.c  fcntl.c  fork.c  fpathconf.c  fstat.c  fstatfs.c  fsversion.c  fsync.c  ftruncate.c  getdents.c  getegid.c  (+111 more)
newlib/libc/sys/nucleos/argp/: Makefile.in
newlib/libc/sys/nucleos/bits/: dirent.h  local_lim.h  posix1_lim.h  posix_opt.h  resource.h  time.h  typesizes.h
newlib/libc/sys/nucleos/cmath/: Makefile.in
newlib/libc/sys/nucleos/dl/: Makefile.in
newlib/libc/sys/nucleos/iconv/: Makefile.in
newlib/libc/sys/nucleos/include/: features.h  grp.h  limits.h  mntent.h  netdb.h  paths.h  stdlib.h  string.h  termios.h  time.h  ttyent.h  tzfile.h  u64.h  ucontext.h  unistd.h
newlib/libc/sys/nucleos/include/asm/: ..check.cmd  ..install.cmd  e820.h  errno.h  ist.h  param.h  posix_types.h  posix_types_32.h  posix_types_64.h  signal.h  swab.h  syscall.h  unistd.h  unistd_32.h
newlib/libc/sys/nucleos/include/asm-generic/: ..check.cmd  ..install.cmd  bitsperlong.h  fcntl.h  int-ll64.h  ioctl.h  param.h  posix_types.h  siginfo.h  signal.h  statfs.h
newlib/libc/sys/nucleos/include/nucleos/: ..check.cmd  ..install.cmd  apm_bios.h  binfmts.h  const.h  edd.h  errno.h  fs.h  kernel.h  mman.h  resource.h  screen_info.h  signal.h  socket.h  stat.h  stddef.h  string.h  swab.h  sysinfo.h  termios.h  time.h  times.h  types.h  utime.h  utsname.h  version.h  wait.h
newlib/libc/sys/nucleos/include/nucleos/byteorder/: ..check.cmd  ..install.cmd  big_endian.h  little_endian.h
newlib/libc/sys/nucleos/include/servers/: ..check.cmd  ..install.cmd
newlib/libc/sys/nucleos/include/servers/fs/: ..check.cmd  ..install.cmd
newlib/libc/sys/nucleos/include/servers/fs/ext2/: ..check.cmd  ..install.cmd  super.h  type.h
newlib/libc/sys/nucleos/include/servers/fs/minixfs/: ..check.cmd  ..install.cmd  super.h  type.h
newlib/libc/sys/nucleos/include/servers/mfs/: ..check.cmd  ..install.cmd  super.h  type.h
newlib/libc/sys/nucleos/intl/: Makefile.in
newlib/libc/sys/nucleos/libcrypt/: Makefile.am  Makefile.in  configure  configure.in  crypt_stub.c
newlib/libc/sys/nucleos/machine/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/nucleos/machine/i386/: Makefile.am  Makefile.in  aclocal.m4  brksize.S  configure  configure.in  crt0.c  getpagesize.c  siglongjmp.S  sigsetjmp.S  syscall.h
newlib/libc/sys/nucleos/machine/i386/include/: setjmp.h  time.h
newlib/libc/sys/nucleos/net/: Makefile.am  Makefile.in  configure  configure.in
newlib/libc/sys/nucleos/nucleosthreads/: Makefile.in
newlib/libc/sys/nucleos/sys/: _types.h  dir.h  dirent.h  errno.h  fcntl.h  features.h  ioctl.h  kstat.h  mkdev.h  mman.h  mount.h  nucleos_time.h  param.h  ptrace.h  resource.h  select.h  signal.h  socket.h  stat.h  stdio.h  string.h  sysmacros.h  termios.h  time.h  types.h  unistd.h  utime.h  utmp.h  utsname.h  wait.h
